--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hompage": "http://pranjalee30.github.io/cake",
+  "homepage": "http://pranjalee30.github.io/cake",
   "name": "cake",
   "version": "0.1.0",
   "private": true,
