--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "fa-icons": "^0.2.0",
+    "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
