--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "pg": "^8.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
