--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
